crates/swc_ecma_parser/tests/test262-error-references/fail/6cd36f7e68bdfb7a.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/6cd36f7e68bdfb7a.js:1:9
  |
1 | for(;;) function a(){}
  |         ^^^^^^^^

